# coex_translator_django

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
coex_translator/: __init__.py  app_settings.py  apps.py  consumer.py  gettext.py  publisher.py  service.py  singleton.py  threading.py  translation.py  translator.py  urls.py  views.py
coex_translator/_internal/clients/base/: clients.py  schemas.py
coex_translator/_internal/clients/translator/: client.py  schemas.py
coex_translator/_internal/services/translation_refresh/: service.py
coex_translator/_utils/: storage.py
coex_translator/_utils/clients/base/: clients.py
coex_translator/_utils/clients/translator/: client.py  schemas.py
coex_translator/_utils/services/translation_refresh/: service.py
coex_translator/internal/: constants.py  storage.py
coex_translator/internal/clients/base/: __init__.py  clients.py  exceptions.py  schemas.py
coex_translator/internal/clients/translator/: client.py  schemas.py
coex_translator/internal/services/translation_refresh/: __init__.py  schemas.py  service.py
coex_translator/management/commands/: export_translations.py  publish_translations.py  translation_amqp_consumer.py
provisioning/compose/localhost/django/: Dockerfile
test_project/: settings.py  urls.py
test_project/tests/: test_amqp.py  test_translation_refresh_service.py  test_translation_service.py  test_translator_client.py  utils.py
test_project/tests/fixtures/translator_service/: publish_translations_response.json  translations_response.json
