[tool.poetry]
name = "django-coex-translator"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coex_translator"}]

[tool.poetry.dependencies]
python = ">=3.11 <4"
requests = "^2.31.0"
boto3 = "^1.26.147"
pika = "^1.3.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django = "^4.2"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
